[package]
name = "libextender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = { version = "~0.10.6", features = ['compress'] }
hex-literal = "~0.4.1"
digest = "~0.10.7"
hex = "~0.4.3"
byteorder = "~1.5.0"
